# depwise

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: CI.yml  rust-clippy.yml
crates/depwise/: Cargo.toml
crates/depwise/src/: main.rs
crates/depwise/src/cli/: check.rs  check_package.rs  mod.rs
crates/depwise_analysis/: Cargo.toml
crates/depwise_analysis/src/: error.rs  lib.rs  parser.rs
crates/depwise_analysis/src/env_backend/: mod.rs
crates/depwise_analysis/src/env_parser/: mod.rs  pyprojecttoml.rs  requirementstxt.rs
crates/depwise_analysis/src/project/: mod.rs  pyprojecttoml.rs  requirementstxt.rs
test/pyproject_package/: pyproject.toml
test/pyproject_package/src/pyproject_package/: __init__.py
tests/: Cargo.toml  cli_tests.rs
tests/data/flat/: README.md  import_non_existant_module.py  import_pandas.py  import_pandas_in_try.py  import_requests.py  import_requests_in_try.py  requirements-dev.txt
tests/data/hatch-test/: LICENSE.txt  README.md  pyproject.toml
tests/data/hatch-test/src/hatch_test/: __about__.py  __init__.py
tests/data/pdm-test/: pyproject.toml
tests/data/pipenv-test/: Pipfile
tests/data/pyproject_package/: README.md  pyproject.toml
tests/data/pyproject_package/src/pyproject_package/: __init__.py  hello.py
tests/data/pyproject_package/src/pyproject_package/child/: ok.py
utils/: module_import_dump.py
