[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0-alpha.1"
homepage = "https://github.com/zbowling/depwise"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/zbowling/depwise"
authors = ["Zac Bowling <zac@zacbowling.com>"]

[workspace.dependencies]
depwise = { path = "crates/depwise" }
depwise-analysis = { path = "crates/depwise_analysis" }

thiserror = "2.0.12"
toml = "0.8.20"
pep508_rs = "0.9.2"
clap = { version = "4.5.32", features = ["derive", "help", "suggestions", "usage"] }
anyhow = "1.0.97"
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustpython-parser = "0.4.0"
minijinja = "2.8.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
