[package]
name = "depwise"
description = "Figure out what dependencies you need"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
toml = { workspace = true }
pep508_rs = { workspace = true }
depwise-analysis = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "help", "suggestions", "usage"] }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
