[package]
name = "depwise-analysis"
description.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
toml = { workspace = true }
pep508_rs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rustpython-parser = { workspace = true }
minijinja = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
